# spoodCLIP

./: README.md  pyproject.toml
spoodclip/image_search/: main.py
supabase/: config.toml
tests/: test_spoodclip.py
