[tool.poetry]
name = "spoodCLIP"
version = "0.1.0"
description = ""
authors = ["austinpower1258 <austinwang115@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.2.2"
vecs = "^0.3.0"
matplotlib = "^3.7.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seed = "image_search.main:seed"
search = "image_search.main:search"
